#
# $Id$
#
# Copyright © 2004 Keith Packard
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of version 2 of the GNU General Public
# License as published by the Free Software Foundation
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#
# Author: Keith Packard <keithp@keithp.com>
#
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(netforward, 0.3, keithp@keithp.com)
AC_CONFIG_SRCDIR([netforward.c])
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for header files.
AC_HEADER_STDC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
